Name:           idris-go
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Andreas Stührk
Maintainer:     Andreas Stührk <andy@hammerhartes.de>
Build-Type:	    Custom
Cabal-Version:  >= 1.8

custom-setup
  setup-depends: base, Cabal

Executable idris-codegen-go
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:  idris
                , base
                , containers
                , directory
                , filepath
                , formatting
                , haskeline >= 0.7
                , mtl
                , process
                , transformers
                , text

  other-modules:  IRTS.CodegenGo
                , IRTS.SSA

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields

Test-suite end-to-end-tests
  Type:           exitcode-stdio-1.0
  Main-is:        TestRun.hs
  hs-source-dirs: test

  Build-depends:  base
                , bytestring
                , directory
                , filepath
                , process
                , tasty
                , tasty-golden >= 2.0
                , utf8-string

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields